# ai-pipelines-for-direct-democracy-forum

./: .gitignore  README.md  client.py  config.py  last_prompt.txt  pyproject.toml  run.py  utils.py
completions/bill_enrichment/: Accountability_of_Grants,_Investment_Mandates_and_Use_of_Public_Resources_Amendment_(End_Pork_Barrelling)_Bill_2024_[No._2].txt  Aged_Care_Legislation_Amendment_Bill_2024.txt  Airline_Passenger_Protections_(Pay_on_Delay)_Bill_2024.txt  Anti-Money_Laundering_and_Counter-Terrorism_Financing_Amendment_(Making_Gambling_Businesses_Accountable)_Bill_2024.txt  Australian_Education_Legislation_Amendment_(Prohibiting_the_Indoctrination_of_Children)_Bill_2020.txt  Broadcasting_Services_Amendment_(Ban_on_Gambling_Advertisements_During_Live_Sport)_Bill_2023.txt  Building_and_Construction_Industry_(Restoring_Integrity_and_Reducing_Building_Costs)_Bill_2024.txt  Climate_Change_Amendment_(Duty_of_Care_and_Intergenerational_Climate_Equity)_Bill_2023.txt  Commission_of_Inquiry_into_Antisemitism_at_Australian_Universities_Bill_2024_(No._2).txt  Commonwealth_Electoral_Amendment_(Banning_Dirty_Donations)_Bill_2022.txt  Commonwealth_Workplace_Protection_Orders_Bill_2024.txt  Competition_and_Consumer_Amendment_(Tougher_Penalties_for_Supermarket_and_Hardware_Businesses)_Bill_2024.txt  Constitution_Alteration_(Right_to_Free_Speech)_2025.txt  Criminal_Code_Amendment_(Genocide,_Crimes_Against_Humanity_and_War_Crimes)_Bill_2024.txt  Digital_Assets_(Market_Regulation)_Bill_2023.txt  (+50 more)
prompts/: bill_enrichment.py
static_data/: bills_before_parliament_for_enrichment.csv
(+70 files in other folders)
