[project]
name = "ddf-ai-enrichment-pipeline"
version = "0.1.0"
description = "AI enrichment pipeline for Direct Democracy Forum"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.63.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "pypdf>=5.3.0",
    "requests>=2.32.3",
    "ruff>=0.9.7",
]
